add progress for collector
